--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "eslint": "^9.9.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react": "^7.35.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
